Fix configurations and templates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 pom.xml
 pom.xml.asc
 *jar
-/lib/
-/classes/
-/target/
 /checkouts/
+/classes/
+/docs/
+/lib/
+/resources/
+/target/
 .lein-deps-sum
 .lein-repl-history
 .lein-plugins/
 .lein-failures
+.nrepl-port
 .cpcache/
