--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "scripts": {
     "postinstall": "dotnet tool restore",
-    "build-css": "sass --style=compressed --no-source-map ./sass/style.scss ./docs/blog-fable/css/style.css",
-    "serve": "dotnet fsi ./dev-server.fsx /blog-fable",
+    "build-css": "sass --style=compressed --no-source-map ./sass/style.scss ./docs/css/style.css",
+    "serve": "dotnet fsi ./dev-server.fsx",
     "build-fable": "dotnet fable src --runScript",
     "build": "npm run build-css && npm run build-fable",
     "dev": "npm run build dev && npm run serve",
