Change target branch name of the workflow for pull request.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,7 +2,7 @@ name: Build pages on Pull Request
 
 on:
   pull_request:
-    branches: ["main"]
+    branches: ["master"]
 
 permissions:
   contents: read
