--- a/contents/booklog/2024/2024-08.yml
+++ b/contents/booklog/2024/2024-08.yml
@@ -3,6 +3,15 @@
   bookAuthor: Scott Wlaschin
   readCount: 1
   previouslyRead: false
-  pages: vi ~ 7
+  pages: vi ~ 5
   notes: |
     冒頭を読んだだけ。なんとなく丁寧な印象を受けた。
+- date: 2024-08-20
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  readCount: 1
+  previouslyRead: false
+  pages: 6 ~ 14
+  notes: |
+    DDD の紹介。イベントストーミングの途中。
+    先をざっと見た感じ第 1 部はモデリングに徹するみたいなのでやはり丁寧な印象。
