--- a/contents/booklog/2024/2024-08.yml
+++ b/contents/booklog/2024/2024-08.yml
@@ -53,3 +53,12 @@
   notes: |
     FP 的にコンテキストの構造とかコードの構造とかこうするよなという話。
     必要になるまで MSA やらず monolith よなというのはまとも。
+- date: 2024-08-24
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  readCount: 1
+  previouslyRead: false
+  pages: 54 ~ 71
+  notes: |
+    定義したドメインをモデルにするための F# のレシピ。
+    単純型と言う名で single case DU 使ったりしてるがデータ量によっては遅いし、氏の blog であるよな Unit of Measure 使うトコじゃないかなという気はする。
