--- a/contents/booklogs/2024/2024-08.yml
+++ b/contents/booklogs/2024/2024-08.yml
@@ -143,3 +143,6 @@
   pages: 155 ~ 166
   notes: |
     パイプラインでドメインを繋ぐ。
+    例だからか知らんが `failwith` 使ってるので、好みじゃない。バキバキ副作用やん。更に失敗する可能性のある関数と示せないのがな。
+    不安になったので先の章を見たら computation で `Result` 使いつつどうにかする話が出てそうなので、ちょっと安心した。
+    エラーをどう扱うかも設計時から考えてほしかったな。
