--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -8,3 +8,12 @@
     部分適用による依存性の注入はわたしもよくやるのだけど、多過ぎると面倒なので Record に詰め込むことをしている。
     この章のアプローチでは引数に羅列しているのが、どうなんだろ。
     この本でモナドでの実装は詳細に触れないようなので自分で考えな。
+- date: 2024-09-02
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  pages: 188 ~ 218
+  notes: |
+    FP 的エラーの扱い。 ようやく railway oriented. 明示的エラーといえば Java の検査例外を思い出す。
+    `bind`, `map` からの独自 computation って流れだがわたしはあんま使いこなせてないからなじませたいな。
+    結局のところエラーの扱いがクリーン()なコードを汚すからその複雑性を DSL に寄せるという理解。
+    それ自体は好きだが Go のように愚直にエラー処理書くのもわかりやすいといえばそうやと思うので流派かなあ。
