--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -17,3 +17,10 @@
     `bind`, `map` からの独自 computation って流れだがわたしはあんま使いこなせてないからなじませたいな。
     結局のところエラーの扱いがクリーン()なコードを汚すからその複雑性を DSL に寄せるという理解。
     それ自体は好きだが Go のように愚直にエラー処理書くのもわかりやすいといえばそうやと思うので流派かなあ。
+- date: 2024-09-03
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  pages: 219 ~ 239
+  notes: |
+    シリアライズは地道に手で書く感じ。キレイな世界に出入りするための通過儀礼みたいなもんか。
+    高級なモデルから平易なデータ構造に落とすため single case union すらもシリアライズ用の DTO に丁寧にマッピングする。
