--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -31,3 +31,11 @@
   notes: |
     永続化。CQS と CQRS は違うと。モデル自体が分かれてるのが CQRS でいいかな。
     イベントソーシングのも当然触れられてるが、十分に説明できないとスルーされる。
+- date: 2024-09-05
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  pages: 252 ~ 266
+  notes: |
+    RDB への永続化。
+    少しテーブル設計に触れてるけど、元々キレイな世界とその他で分けてるのだし、テーブル設計は RDB の事情に合わせてやればいい。
+    ORM 使わないのはわたしの好みなので良い。補償トランザクションは知ららなかったので調べておく。
