--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -39,3 +39,12 @@
     RDB への永続化。
     少しテーブル設計に触れてるけど、元々キレイな世界とその他で分けてるのだし、テーブル設計は RDB の事情に合わせてやればいい。
     ORM 使わないのはわたしの好みなので良い。補償トランザクションは知ららなかったので調べておく。
+- date: 2024-09-06
+  bookTitle: Domain Modeling Made Functional 関数型ドメインモデリング ドメイン駆動設計と F# でソフトウェアの複雑さに立ち向かおう
+  bookAuthor: Scott Wlaschin
+  pages: 267 ~ 287
+  notes: |
+    設計を更新するのに型駆動でコンパイルエラー活用してやるって話。
+    このときにはじめに作ったドメイン文書には触れないんかー。これで本は終わり。
+    本を通して、 computation や active pattern の F# 機能を活用することあれど、データと処理が分割された FP の特徴を活かして静的型駆動でドメインを表現するテクニックの話だったと理解した。
+    個人的に気になった F# でのパフォの改善等は触れられてない(link は多少あるか)ので自分でやれってことやろな。
