--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -58,3 +58,10 @@
     古いので Microsoft Learn で code quotation のページも合わせて見る。
     pocof のクエリに code quotation 使えるよな。動的に関数生成したら速いかはわからんので試さないといけない。
     読後、訳者の人 dmmf 本のレビュワの人だと気づいた。
+- date: 2024-09-08
+  bookTitle: 世界一流エンジニアの思考法
+  bookAuthor: 牛尾剛
+  pages: 1 ~ 55
+  notes: |
+    メソッド屋のブログで Be Lazy 読んだころからファンなので読み始めた。とりあえず 1 章。
+    目次見る感じ概ねブログや note で見た内容なのでサラッと読む。
