--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -57,3 +57,10 @@
   notes: |
     メソッド屋のブログで Be Lazy 読んだころからファンなので読み始めた。とりあえず 1 章。
     目次見る感じ概ねブログや note で見た内容なのでサラッと読む。
+- date: 2024-09-09
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 56 ~ 95
+  notes: |
+    第 2 章は Be Lazy 。コレを 2016 年に読んで、その後ブログに載ってたエッセンシャル思考も読んだんだった。
+    いま 100% 身についたかというとそうではないかも知れんけど、これがきっかけで自分のやり方が再構築されたのよな。
+    やっぱいいな Be Lazy は。
