--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -64,3 +64,11 @@
     第 2 章は Be Lazy 。コレを 2016 年に読んで、その後ブログに載ってたエッセンシャル思考も読んだんだった。
     いま 100% 身についたかというとそうではないかも知れんけど、これがきっかけで自分のやり方が再構築されたのよな。
     やっぱいいな Be Lazy は。
+- date: 2024-09-10
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 96 ~ 130
+  notes: |
+    第 3 章。脳の負荷を減らす。
+    この章の話に沿うとわたしは殆ど Level 2 で知識に対して何も制御権を持ってない。
+    イラチの話はわからんでもないが悪しき大阪のせいちゃうやろｗ
+    時間をかけて確実に 1 つずつ積み上げていって完全な制御権を得る。理解・記憶・反復やと。
