--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -72,3 +72,10 @@
     この章の話に沿うとわたしは殆ど Level 2 で知識に対して何も制御権を持ってない。
     イラチの話はわからんでもないが悪しき大阪のせいちゃうやろｗ
     時間をかけて確実に 1 つずつ積み上げていって完全な制御権を得る。理解・記憶・反復やと。
+- date: 2024-09-11
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 131 ~ 164
+  notes: |
+    第 4 章。コミュニケーション。
+    シンプルに伝え、知らないことを恥じずに聞き、 HRT で以て議論する。
+    特別なことはないが、楽しんだもの勝ちってのはホントよくわかるわ。
