--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -79,3 +79,10 @@
     第 4 章。コミュニケーション。
     シンプルに伝え、知らないことを恥じずに聞き、 HRT で以て議論する。
     特別なことはないが、楽しんだもの勝ちってのはホントよくわかるわ。
+- date: 2024-09-11
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 165 ~ 202
+  notes: |
+    第 5 章。自己組織化されたチーム。
+    自己組織化されたチームは結構勉強したのでせやなってかんじ。良くない組織だと従業員も子供扱いを求めてるフシあってやな。
+    「自分以外のものになる」ことは期待されないの、マッコールさんみあるわ。こういう信頼で機能するの、みんややる気があって真摯に取り組むからやねんよな。
