--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -86,3 +86,12 @@
     第 5 章。自己組織化されたチーム。
     自己組織化されたチームは結構勉強したのでせやなってかんじ。良くない組織だと従業員も子供扱いを求めてるフシあってやな。
     「自分以外のものになる」ことは期待されないの、マッコールさんみあるわ。こういう信頼で機能するの、みんなやる気があって真摯に取り組むからやねんよな。
+- date: 2024-09-13
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 203 ~ 233
+  notes: |
+    第 6 章。所謂ライフハック。昔 MIND HACKS を読んで以降色々試行錯誤してるのでかなり浅く読む。
+    休息時間を作るためのタイムボックスとか、エネルギーロスの縮小、フィジカル強化みたいなところ。
+    氏はテスト値上げるのにサプリ使ってるけどわたしはサプリはなんとなくアダプトゲンしかやらない。
+    実際にギター弾いたり自重トレしたり読書したりで気分切り替えていくと効果あるよな。
+    家族いると家事育児で必然的に仕事の枠決まるしある意味生産性は上げざるを得なくなる。
