--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -95,3 +95,13 @@
     氏はテスト値上げるのにサプリ使ってるけどわたしはサプリはなんとなくアダプトゲンしかやらない。
     実際にギター弾いたり自重トレしたり読書したりで気分切り替えていくと効果あるよな。
     家族いると家事育児で必然的に仕事の枠決まるしある意味生産性は上げざるを得なくなる。
+- date: 2024-09-14
+  bookTitle: 世界一流エンジニアの思考法
+  pages: 234 ~ 270
+  notes: |
+    第 7 章とあとがき。コレでこの本は終わり。
+    わたしは生成 AI の出現で何も不安感じなかったのであんまこの感覚わからんのよな。
+    実際に仕事でシステムに組み込んだり日常的に ChatGPT や Github Copilot 使って楽させてもらってるが、それ以上のものを感じたことはないな。
+    中盤のエモいところも、そういうのとは距離を取ったらいいってだけだとアラフォー入る頃知ったわ。
+    総じてパラダイムシフトに遭っても自分が楽しんで進める道を行こうって話だと認識した。自分の人生は自分で決めろってやつ。
+    最後に、氏はラッキーという言葉を何度も書いてるが、 Luck is what happens when preparation meets opportunity. と言われるようにそれも積み重ねがあってのことなので見習いたい。
