--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -11,3 +11,6 @@
 - id: how-world-class-engineers-thinks
   bookTitle: 世界一流エンジニアの思考法
   bookAuthor: 牛尾剛
+- id: docs-for-developers
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  bookAuthor: Jareed Bhatti, Zachary Sarah Corleissen, Jen Lambourne, David Nunez, Heidi Waterhouse
