--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -105,3 +105,13 @@
     中盤のエモいところも、そういうのとは距離を取ったらいいってだけだとアラフォー入る頃知ったわ。
     総じてパラダイムシフトに遭っても自分が楽しんで進める道を行こうって話だと認識した。自分の人生は自分で決めろってやつ。
     最後に、氏はラッキーという言葉を何度も書いてるが、 Luck is what happens when preparation meets opportunity. と言われるようにそれも積み重ねがあってのことなので見習いたい。
+- date: 2024-09-15
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 1 ~ 28
+  notes: |
+    前回が軽かったので今回は積読消化回。積み過ぎて日があたってたところのオレンジが褪せてる。
+    わたしは仕事でサブシステムを作ったら文書や障害対応の手引なんかを書くのは結構好きだ。
+    それに対し称賛されることもあるけど、逆にしょーもないことすんなと批判されることもある。
+    書いてもコイツラ読まへんなーという状況も常にあるので、なんかきっかけを掴めたらいいな。
+    「ドキュメントは機能の 1 つ」、いいなあ。はじめに、は入門 Kubernetes の人。
+    この本はツールになるべく触れてないらしく、良い。ツールで解決できたら誰も困ってないもんな。
