--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -115,3 +115,11 @@
     書いてもコイツラ読まへんなーという状況も常にあるので、なんかきっかけを掴めたらいいな。
     「ドキュメントは機能の 1 つ」、いいなあ。はじめに、は入門 Kubernetes の人。
     この本はツールになるべく触れてないらしく、良い。ツールで解決できたら誰も困ってないもんな。
+- date: 2024-09-16
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 29 ~ 46
+  notes: |
+    chapter 1 終わり。
+    この本でも届けたい相手のペルソナを作る。「遠くへ行きたければ、みんなで行け」でも「インディゲームサバイバルガイド」でもそんな感じだった。
+    仕事ではガチでやるのは当然として趣味レベルでサクッと始めるには重いな。呼吸をするようにペルソナを作れるようになれってことなのか。
+    社内向けにはあえて知識の呪いにかかったまま文書を書くこともあるけど、どうなんやろね。後述するペルソナにそぐうならいいのかな。
