--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -123,3 +123,10 @@
     この本でも届けたい相手のペルソナを作る。「遠くへ行きたければ、みんなで行け」でも「インディゲームサバイバルガイド」でもそんな感じだった。
     仕事ではガチでやるのは当然として趣味レベルでサクッと始めるには重いな。呼吸をするようにペルソナを作れるようになれってことなのか。
     社内向けにはあえて知識の呪いにかかったまま文書を書くこともあるけど、どうなんやろね。ペルソナにそぐうならいいのかな。
+- date: 2024-09-17
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 47 ~ 68
+  notes: |
+    chapter 2 終わり。
+    ドキュメントのタイプとパターンというのは意識して考えたことなかったので学びになった。
+    届けたい先に合わせて提供するパターンが変わる。ここは何度か噛みしめるように読もう。
