--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -130,3 +130,12 @@
     chapter 2 終わり。
     ドキュメントのタイプとパターンというのは意識して考えたことなかったので学びになった。
     届けたい先に合わせて提供するパターンが変わる。ここは何度か噛みしめるように読もう。
+- date: 2024-09-18
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 69 ~ 92
+  notes: |
+    chapter 3 ドラフト。
+    ドキュメントの構成要素を使い分け、流し読み上等で簡潔に、重要なことははじめに書く。
+    完璧を目指さず満たすべき要素を網羅してるか注意して初版を書き上げたら一歩踏み出せたと。
+    なかなか普段ここまで考えて書いてないなって気がするわ。
+    
