--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -138,4 +138,11 @@
     ドキュメントの構成要素を使い分け、流し読み上等で簡潔に、重要なことははじめに書く。
     完璧を目指さず満たすべき要素を網羅してるか注意して初版を書き上げたら一歩踏み出せたと。
     なかなか普段ここまで考えて書いてないなって気がするわ。
-    
+- date: 2024-09-18
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 93 ~ 106
+  notes: |
+    chapter 4 編集。
+    技術的な正しさと必要うな情報の完全性はやってそうやけどその後の構成とか簡潔さの編集は中々訓練してない難しそう。
+    フィードバックの受け方送り方。 plussing は覚えとこう。
+    ストーリーにもあるけどコードレビューと同じなので HRT を意識したいところ。
