--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -146,3 +146,10 @@
     技術的な正しさと必要うな情報の完全性はやってそうやけどその後の構成とか簡潔さの編集は中々訓練してない難しそう。
     フィードバックの受け方送り方。 plussing は覚えとこう。
     ストーリーにもあるけどコードレビューと同じなので HRT を意識したいところ。
+- date: 2024-09-20
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 107 ~ 128
+  notes: |
+    chapter 5 サンプルコート。
+    目的が明確で簡潔で正確で拡張可能であること。テストされてて自動生成でサンドボックスがあって、みたいな話。
+    そーいや前 .NET のドキュメントの repo 見たときもスクリプトは分かれてたなー、そういうあれか。つながった。
