--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -148,8 +148,15 @@
     ストーリーにもあるけどコードレビューと同じなので HRT を意識したいところ。
 - date: 2024-09-20
   bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
-  pages: 107 ~ 128
+  pages: 107 ~ 124
   notes: |
     chapter 5 サンプルコード。
     目的が明確で簡潔で正確で拡張可能であること。テストされてて自動生成でサンドボックスがあって、みたいな話。
     そーいや前 .NET のドキュメントの repo 見たときもスクリプトは分かれてたなー、そういうあれか。つながった。
+- date: 2024-09-21
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 125 ~ 144
+  notes: |
+    chapter 6 画像や動画といったビジュアルコンテンツ。
+    視覚的により読者に理解しやすいが、アクセシビリティの配慮と陳腐化の速さに難しさがある。
+    インフラ構成図とか書くといつも線が絡まるので、そもそも図を書くの難しいねんよなと思っている。
