--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -160,3 +160,11 @@
     chapter 6 画像や動画といったビジュアルコンテンツ。
     視覚的により読者に理解しやすいが、アクセシビリティの配慮と陳腐化の速さに難しさがある。
     インフラ構成図とか書くといつも線が絡まるので、そもそも図を書くの難しいねんよなと思っている。
+- date: 2024-09-22
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 145 ~ 156
+  notes: |
+    chapter 7 公開。
+    結構重厚なフローやけど会社のサービスのドキュメントともなればそういう感じかも。
+    CD してないと詰むなと思ったが、はじめは toil を実感するためにシンプルに手動でやるとのこと。そうなのか...
+    自作のツールはリリースノートちゃんとやってないしはじめてみるかー。
