--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -168,3 +168,10 @@
     結構重厚なフローやけど会社のサービスのドキュメントともなればそういう感じかも。
     CD してないと詰むなと思ったが、はじめは toil を実感するためにシンプルに手動でやるとのこと。そうなのか...
     自作のツールはリリースノートちゃんとやってないしはじめてみるかー。
+- date: 2024-09-23
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 157 ~ 171
+  notes: |
+    chapter 8 フィードバックの収集とその対応。
+    課題の完了をユーザに通知するのを推奨してるが、しないとこ結構ありそうな印象。どこぞのクラウドも皆無だったし。
+    ユーザーコミュニティの設立についてはサラッと触れられてる程度。 People Powered 読んだ感じ思いつきで始めれるもんでもないし、ここで深追いする話ではないからそんなもんか。
