--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -175,3 +175,10 @@
     chapter 8 フィードバックの収集とその対応。
     課題の完了をユーザに通知するのを推奨してるが、しないとこ結構ありそうな印象。どこぞのクラウドも皆無だったし。
     ユーザーコミュニティの設立についてはサラッと触れられてる程度。 People Powered 読んだ感じ思いつきで始めれるもんでもないし、ここで深追いする話ではないからそんなもんか。
+- date: 2024-09-24
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 172 ~ 191
+  notes: |
+    chapter 9 品質測定。前半は知らないことが多く、ほーという感じだった。
+    Textlint は使ってるけど、 HemingwayEditor も試してみよう。測定するまでもなく機械的に改善できるならあらかじめやっておきたいよな。
+    なんかプロジェクトの KPI を定めるのと同じような印象を受けた。
