--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -182,3 +182,10 @@
     chapter 9 品質測定。前半は知らないことが多く、ほーという感じだった。
     Textlint は使ってるけど、 HemingwayEditor も試してみよう。測定するまでもなく機械的に改善できるならあらかじめやっておきたいよな。
     なんかプロジェクトの KPI を定めるのと同じような印象を受けた。
+- date: 2024-09-25
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 192 ~ 207
+  notes: |
+    chapter 10 構成。情報アーキテクチャ出てきた。ずっとやらずに来てるなー。
+    情報アーキテクチャで利用者がコンテンツのメンタルモデルを作り上げるのを支援するらしい。
+    作って終わりじゃないので保守に本質があると思うしメンタルモデルを検証し続けるって書いてるけど、それは次の章みたい。
