--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -189,3 +189,11 @@
     chapter 10 構成。情報アーキテクチャ出てきた。ずっとやらずに来てるなー。
     情報アーキテクチャで利用者がコンテンツのメンタルモデルを作り上げるのを支援するらしい。
     作って終わりじゃないので保守に本質があると思うしメンタルモデルを検証し続けるって書いてるけど、それは次の章みたい。
+- date: 2024-09-26
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 208 ~ 221
+  notes: |
+    chapter 11 保守と非推奨化。これで本編は終わり。お気持ち表明みたいなのなくあっさり終わったのが本書らしい気もする。
+    サービスとドキュメントのリリースを同期するのとか、リファレンスの生成、保守作業の自動化らへん。
+    7 章でもそうだったけど本書は自動化に慎重派で、 toil を見極めてやれよと。
+    web ドキュメントが標準の原題だと削除って選択肢はなかなかないやろうな。実際よくページが無くなって困るし。ページ残して新しいのに流すか、自動でリダイレクトか...
