--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -197,3 +197,10 @@
     サービスとドキュメントのリリースを同期するのとか、リファレンスの生成、保守作業の自動化らへん。
     7 章でもそうだったけど本書は自動化に慎重派で、 toil を見極めてやれよと。
     web ドキュメントが標準の原題だと削除って選択肢はなかなかないやろうな。実際よくページが無くなって困るし。ページ残して新しいのに流すか、自動でリダイレクトか...
+- date: 2024-09-27
+  bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
+  pages: 222 ~ 242
+  notes: |
+    付録。ドキュメンタリアンの採用、ドキュメントに取り組み続けるためのリソース等。
+    htmltest は知らなかったがすぐ使えそうなので試してみる。あとがきにもあるがあとは実践あるのみよな。
+    仕事と趣味プロでドキュメントライティングを実践していこう。
