--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -204,3 +204,10 @@
     付録。ドキュメンタリアンの採用、ドキュメントに取り組み続けるためのリソース等。
     htmltest は知らなかったがすぐ使えそうなので試してみる。あとがきにもあるがあとは実践あるのみよな。
     仕事と趣味プロでドキュメントライティングを実践していこう。
+- date: 2024-09-28
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: iii ~ xviii
+  notes: |
+    積読消化回。 10 年以上前にリファクタリング・ウェットウェアを読んだ時からこういう本は好きなので。
+    見た感じワーキングメモリにも触れてるぽい。脳のワーキングメモリを鍛える！もだいぶ前読んだので学びほぐしみたいな感じで臨む。
+    ファストアンドスローも持ってるけどどこに行ったかわからなくなってるしこの機会に探し出そう。
