--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -14,3 +14,6 @@
 - id: docs-for-developers
   bookTitle: ユーザーの問題解決とプロダクトの成功を導く エンジニアのためのドキュメントライティング
   bookAuthor: Jareed Bhatti, Zachary Sarah Corleissen, Jen Lambourne, David Nunez, Heidi Waterhouse
+- id: the-programmers-brain
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  bookAuthor: Felienne Hermans
