--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -211,3 +211,11 @@
     積読消化回。 10 年以上前にリファクタリング・ウェットウェアを読んだ時からこういう本は好きなので。
     見た感じワーキングメモリにも触れてるぽい。脳のワーキングメモリを鍛える！もだいぶ前読んだので学びほぐしみたいな感じで臨む。
     ファストアンドスローも持ってるけどどこに行ったかわからなくなってるしこの機会に探し出そう。
+- date: 2024-09-29
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 1 ~ 14
+  notes: |
+    Part 1 Chapter 1 コードをより良く読むために コーディング中の混乱を紐解く
+    知識不足 = 長期記憶、情報不足 = 短期記憶、処理能力不足 = ワーキングメモリ。
+    長期記憶がストレージ、短期記憶 = RAM、ワーキングメモリ = CPU 。これらはわかりやすく抽象化してるだけであることに注意。
+    実際は、例えば短期記憶に欠落する情報でも長期記憶内でパターン化された情報を参照して推測したり、相互に作用している。
