--- a/contents/booklogs/2024/2024-09.yml
+++ b/contents/booklogs/2024/2024-09.yml
@@ -219,3 +219,11 @@
     知識不足 = 長期記憶、情報不足 = 短期記憶、処理能力不足 = ワーキングメモリ。
     長期記憶がストレージ、短期記憶 = RAM、ワーキングメモリ = CPU 。これらはわかりやすく抽象化してるだけであることに注意。
     実際は、例えば短期記憶に欠落する情報でも長期記憶内でパターン化された情報を参照して推測したり、相互に作用している。
+- date: 2024-09-30
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 15 ~ 40
+  notes: |
+    Part 1 Chapter 2 コードをより良く読むために コードを速読する
+    チャンク、感覚記憶、アイコニックメモリ。
+    パターン、コメント、ビーコンの適切な利用がチャンクを形成するのを助ける。
+    長期記憶にパターンが充実してるほど、短期記憶のスロットを節約でき、効率的に記憶できるってか。
