--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -8,3 +8,13 @@
     この状態を web の検索とかでカバーしてしまうと検索強度が上がらないままになる。
     意図的に思い出そうとすること≒想起記憶、また覚えたての概念を他の既知の概念につなげる精緻化≒推敲が強度を高めるのに有効に働く。
     素早く習得できたことないので参考にしよ。
+  - date: 2024-10-02
+    bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+    pages: 57 ~ 76
+    notes: |
+      Part 1 Chapter 4 コードをより良く読むために 複雑なコードの読み方。
+      コードが複雑だとコレまでの手法は通用しない。問題の処理に用いられる短期記憶＝ワーキングメモリが 2~6 個しか同時に処理できないため。
+      課題内在性負荷＝問題自身の複雑さ、課題外在性負荷＝コードの書き方や読み手の知識不足に起因する複雑さ。
+      複雑で読めないコードには認知的リファクタリングを施すか、依存関係グラフ、状態遷移表といったツールで理解を深める。
+      仕事なら認知的リファクタリングという選択はあるかな。趣味プロであえてやる意味ないし好きじゃないな。
+      妙にリスト内包表記が槍玉に上がっててかわいそう...
