--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -18,3 +18,14 @@
     複雑で読めないコードには認知的リファクタリングを施すか、依存関係グラフ、状態遷移表といったツールで理解を深める。
     仕事なら認知的リファクタリングという選択はあるかな。趣味プロであえてやる意味ないし好きじゃないな。
     妙にリスト内包表記が槍玉に上がっててかわいそう...
+- date: 2024-10-03
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 77 ~ 93
+  notes: |
+    Part 2 Chapter 5 コードについて考える コードの深い理解に到達する。
+    変数の役割フレームワークは読み解くときにマーキングの方法だけでなく書くときにも使える。
+    チャールズ・シモニーのハンガリアン記法の正しい使い方にも可能性がある。
+    ただいずれも強制力がないからなあ。
+    どこからコードを読み始めるかという起点がフォーカルポイント。
+    これってエラーログとかの外的要因で明確なら困らなさそう。
+    読解するのが目的だとエントリポイントや関数の先頭からとか、より難易度高くなる選択肢しかないんやろな。
