--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -29,3 +29,13 @@
     どこからコードを読み始めるかという起点がフォーカルポイント。
     これってエラーログとかの外的要因で明確なら困らなさそう。
     読解するのが目的だとエントリポイントや関数の先頭からとか、より難易度高くなる選択肢しかないんやろな。
+- date: 2024-10-04
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 93 ~ 108
+  notes: |
+    Part 2 Chapter 5 コードについて考える コードの深い理解に到達する。
+    コードの読解に関してクヌース先生だけ別格でわろた。 Coders at Work 家のどっかに積んでるわ。
+    プログラムの読解には言語能力が強く関係しており、自然言語を読むためのテクニックがコード読解にも使える。
+    過去の知識の活性化、読解の監視、コードの重要性の判断、変数から推論、コードの可視化、自問自答、コードの要約。
+    こうやってキーワードを羅列するとフレームワークのようになるけど、こうなると個人的に全然やらなくなるタイプのやつ。
+    特に手で表を書き出すとかが字も図も下手で苦手なのでなんかいい感じに自分のスタイルに組み込みたいな。
