--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -39,3 +39,13 @@
     過去の知識の活性化、読解の監視、コードの重要性の判断、変数から推論、コードの可視化、自問自答、コードの要約。
     こうやってキーワードを羅列するとフレームワークのようになるけど、こうなると個人的に全然やらなくなるタイプのやつ。
     特に手で表を書き出すとかが字も図も下手で苦手なのでなんかいい感じに自分のスタイルに組み込みたいな。
+- date: 2024-10-05
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 109 ~ 130
+  notes: |
+    Part 2 Chapter 6 コードについて考える プログラミングに関する問題をよりうまく解決するには。
+    コードの読解にメンタルモデルを利用する。メンタルモデルはデータ構造やパターン。
+    想定マシンはプログラミング言語が何をしているかを抽象化するモデル。理解の際に記憶に定着した誤ったモデルが利用されることもある。
+    これらのメンタルモデルは互いに競合せずに問題に適用することもできる。長期記憶のスキーマと強く関連づくものほど有用。
+    結局のところ身近な概念で振る舞いを表現するから、自身の持つ語彙力が貧弱だと貧弱になりうる。
+    つまりちゃんと勉強しろよって話に聞こえるよな。メンタルモデルそれ自身もどれだけ手札があるかという話だし。
