--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -49,3 +49,16 @@
     これらのメンタルモデルは互いに競合せずに問題に適用することもできる。長期記憶のスキーマと強く関連づくものほど有用。
     結局のところ身近な概念で振る舞いを表現するから、自身の持つ語彙力が貧弱だと貧弱になりうる。
     つまりちゃんと勉強しろよって話に聞こえるよな。メンタルモデルそれ自身もどれだけ手札があるかという話だし。
+- date: 2024-10-06
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 131 ~ 146
+  notes: |
+    Part 2 Chapter 6 コードについて考える 誤認識：思考に潜むバグ。
+    学習した知識が他の分野でも役に立つのを転移(transfer)という。
+    同じ領域の学習が容易になるのを学習中の転移(transfer during learning)という。
+    長期記憶に格納された知識が学習に役立つのは学習の転移(transfer of learning)という。名前似過ぎてややこし...
+    転移にも種類がある。
+    無意識にスキルを伝達する一般道の転移(Low Road Transfer)、意識して伝達する高速道路の転移(High Road Transfer)、対象の領域の遠近で近転移、遠転移、 学習に良い影響を与える正の転移、悪い影響を与える負の転移。
+    遠転移はほとんど自然発生することなく、適切に近い領域に転移することがよい学習効果につながる。
+    負の転移が誤認識を生む。これを抑制するために概念変化(conceptual change)でメンタルモデルを置き換えたり、抑制によって正の転移を促す。
+    ただし正しいモデルを構築しても古いモデルが邪魔をすることも常に起こり得る。
