--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -62,3 +62,10 @@
     遠転移はほとんど自然発生することなく、適切に近い領域に転移することがよい学習効果につながる。
     負の転移が誤認識を生む。これを抑制するために概念変化(conceptual change)でメンタルモデルを置き換えたり、抑制によって正の転移を促す。
     ただし正しいモデルを構築しても古いモデルが邪魔をすることも常に起こり得る。
+- date: 2024-10-07
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 147 ~ 160
+  notes: |
+    Part 3 Chapter 7 より良いコードを書くために よりよい命名を行う方法。
+    名前はコードの大部分を占める。名前の文法を適用することで名前の品質を高め、チャンクを促す、ビーコンになる等して短期記憶・長期記憶を助ける。
+    命名の難しいのは linting できないとこと感じてるのでバトラー方式の linter ないんかな。
