--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -69,3 +69,12 @@
     Part 3 Chapter 7 より良いコードを書くために よりよい命名を行う方法。
     名前はコードの大部分を占める。名前の文法を適用することで名前の品質を高め、チャンクを促す、ビーコンになる等して短期記憶・長期記憶を助ける。
     命名の難しいのは linting できないとこと感じてるのでバトラー方式の linter ないんかな。
+- date: 2024-10-07
+  bookTitle: People Powered 「ビジネス」「ブランド」「チーム」を変革するコミュニティの原則 遠くへ行きたければ、みんなで行け
+  pages: 269 ~ 285
+  notes: |
+    輪読会のやつ。
+    これまでの総集編という感じなので特に新しいキーワード等はなかった。
+    ただ、できませんでしたじゃないねんぞッてあたりや、完璧でなくてもいいが追い求めろよというあたりは、強い気持ちを感じる。
+    また、もう一度この本を読み直せよって、学び続けることの重要さを示してるあたりもエモくて良かった。
+    あとは日本語版解説だけなので、これで本編は終わり。
