--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -78,3 +78,13 @@
     ただ、できませんでしたじゃないねんぞッてあたりや、完璧でなくてもいいが追い求めろよというあたりは、強い気持ちを感じる。
     また、もう一度この本を読み直せよって、学び続けることの重要さを示してるあたりもエモくて良かった。
     あとは日本語版解説だけなので、これで本編は終わり。
+- date: 2024-10-08
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 161 ~ 172
+  notes: |
+    Part 3 Chapter 8 より良いコードを書くために よりよい命名を行う方法。
+    略語が指す意味がそれほどコンセンサスが取れてないから略さない方がいい。
+    キャメルやスネークそれぞれ一長一短あるが全体として一貫性がとれてたらどっちでも良い(でもゼロから始めるならキャメル推しらしいが)。
+    誤った名前がバグを導くかは因果関係があるとは限らない。
+    雛形を少なくし、フェイテルソンの 3 ステップで名付けることで品質の高い命名ができる。
+    コレだけ読むと、キャメル＆ケバブで推奨される動詞が決まってる PowerShell の cmdlet 命名アプローチは勝ち筋やん。
