--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -88,3 +88,12 @@
     誤った名前がバグを導くかは因果関係があるとは限らない。
     雛形を少なくし、フェイテルソンの 3 ステップで名付けることで品質の高い命名ができる。
     コレだけ読むと、キャメル＆ケバブで推奨される動詞が決まってる PowerShell の cmdlet 命名アプローチは勝ち筋やん。
+- date: 2024-10-09
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 173 ~ 187
+  notes: |
+    Part 3 Chapter 9 より良いコードを書くために 汚いコードとそれによる認知負荷を避けるための 2 つのフレームワーク。
+    コードの臭いは構造的アンチパターンで、名前は言語的アンチパターン(概念的)。
+    構造的アンチパターンはワーキングメモリに負担をかけ、誤ったチャンク化を引き起こす。言語的アンチパターンは負の転移を引き起こす。
+    コードの臭い。一部は OOP の文脈に依存してたりあまり一般化できるものではないねんよな。エッセンスは FP とか他の文脈にも活きるねんけど。
+    恐らくそのエッセンスと思ってきたところが認知プロセスに関わる部分なんやろな。
