--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -97,3 +97,14 @@
     構造的アンチパターンはワーキングメモリに負担をかけ、誤ったチャンク化を引き起こす。言語的アンチパターンは負の転移を引き起こす。
     コードの臭い。一部は OOP の文脈に依存してたりあまり一般化できるものではないねんよな。エッセンスは FP とか他の文脈にも活きるねんけど。
     恐らくそのエッセンスと思ってきたところが認知プロセスに関わる部分なんやろな。
+- date: 2024-10-10
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 188 ~ 197
+  notes: |
+    Part 3 Chapter 10 より良いコードを書くために 複雑な問題をより上手に解決するために。
+    問題解決を構成する要素はゴール状態・スタート状態・ルール。最適な方法で状態空間を遷移してゴール状態に到達するのが問題解決。
+    問題解決能力向上には自動化と範例というテクニックが使える。
+    自動化は、潜在記憶(手続き記憶)≒無意識にタイプする等の肉体的な記憶。認知不可をかけないが、負の転移を起こしがちなので学びほぐしが要る。
+    潜在記憶は長期記憶を形成するテクニック(間隔を空けて反復する)で強化できる。
+    範例は、問題解決のためのレシピを利用した学習。レシピが学習関連負荷を下げて脳が忙し過ぎて記憶できない状態を避け、長期記憶を形成しやすくする。
+    なんか何事も練習あるのみって感じやなやはり。
