--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -108,3 +108,12 @@
     潜在記憶は長期記憶を形成するテクニック(間隔を空けて反復する)で強化できる。
     範例は、問題解決のためのレシピを利用した学習。レシピが学習関連負荷を下げて脳が忙し過ぎて記憶できない状態を避け、長期記憶を形成しやすくする。
     なんか何事も練習あるのみって感じやなやはり。
+- date: 2024-10-11
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 209 ~ 224
+  notes: |
+    Part 4 Chapter 11 コーディングにおける共同作業 コードを書くという行為。
+    プログラミングは 5 つの活動で構成される。検索・理解・転写・増強・探索。それぞれに異なる認知システムを利用するので適したアプローチが異なる。
+    プログラミングではゾーンに入るのに時間がかかり、一度割り込まれると戻るのに約 25 分かかるので、戻るための目印を置く＝ロードブロックリマインダ。これは後述のテクニックを使ってる。
+    割り込みから復帰しやすくするための 3 つのテクニック。 1 コードのメンタルモデルを保存する、 2  展望記憶(TODO のような未来の記憶)を補助する、 3 下位目標のラベル付け(解決ステップを細分化したテキスト)。
+    FlowLight わろた。集中してる時点滅したら気になりそう。マルチタスクできないのはもう昔からわかってるもんね。やらぬが吉。
