--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -117,3 +117,14 @@
     プログラミングではゾーンに入るのに時間がかかり、一度割り込まれると戻るのに約 25 分かかるので、戻るための目印を置く＝ロードブロックリマインダ。これは後述のテクニックを使ってる。
     割り込みから復帰しやすくするための 3 つのテクニック。 1 コードのメンタルモデルを保存する、 2  展望記憶(TODO のような未来の記憶)を補助する、 3 下位目標のラベル付け(解決ステップを細分化したテキスト)。
     割り込みを防ぐための FlowLight わろた。集中してる時赤色点滅してたら気になりそう。マルチタスクできないのはもう昔からわかってるもんね。やらぬが吉。
+- date: 2024-10-12
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 225 ~ 241
+  notes: |
+    Part 4 Chapter 11 コーディングにおける共同作業 より大きなシステムの設計と改善。
+    コードベースの認知特性を予測する術として Chapter 11 で出た CDN(Cognitive Dimensions of Notation) から派生した CDCB(Cognitive Dimensions of Code Bases) がある。
+    13 の次元を持つ。エラーの発生しやすさ、一貫性、拡張性、隠れた依存関係、暫定性、粘性、段階的評価、役割表現力、マッピングの近接度、ハードな心的操作、副次的表記、抽象化、視認性。
+    エラーの発生しやすさを下げると粘性が高まる等、特性はトレードオフの関係にある。
+    特性はプログラミング言語・フレームワーク・エディタのようなツールの選択で決まるような制御しにくいものもあれば、コードの構造的・言語的な問題で改善できるものもあるのは救いか。
+    どの特性を重視するかはチームのスキルセットや好みの問題やろな。言語の選択によってエラーの発生しやすさを上げてまで粘性を高めたいとは思わんかな。
+    暫定性と段階的評価は REPL でカバーできそうやなと見えるし、言語やフレームワークの選択は固く、それで下げた特性はツールでカバーて感じが好みか。
