--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -17,3 +17,6 @@
 - id: the-programmers-brain
   bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
   bookAuthor: Felienne Hermans
+- id: how-to-read-a-book
+  bookTitle: 本を読む本
+  bookAuthor: Mortimer J. Adler, Charles Van Doren
