--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -136,3 +136,10 @@
     完全に受動的な読書はなく、情報を受け取るにも積極的に頭を思考して著者の意図を理解する。高度な本であればなおさら。
     読書はある意味、教師から学ぶ行為である。ただし問いなおすことはできず、ただ与えられた情報から自発的に理解を深める点では、発見する行為といえる。
     今がむしゃらに本読んでるだけなのでこういう本で読み込みのレベルが上がると更に良さそうよな。
+- date: 2024-10-14
+  bookTitle: 本を読む本
+  pages: 26 ~ 31
+  notes: |
+    2 読書のレベル。
+    初級読書(本が何を述べているか理解する)、点検読書(短い時間で素早く全体を把握する)、分析読書(時間の制限なく本の理解を深める)、シントピカル読書(1 つのトピックで何冊も相互に関連付け理解を深める)。
+    どうも今の理解度だとうまく言葉にできてなそうや。
