--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -143,3 +143,13 @@
     2 読書のレベル。
     初級読書(本が何を述べているか理解する)、点検読書(短い時間で素早く全体を把握する)、分析読書(時間の制限なく本の理解を深める)、シントピカル読書(1 つのトピックで何冊も相互に関連付け理解を深める)。
     どうも今の理解度だとうまく言葉にできてなそうや。
+- date: 2024-10-15
+  bookTitle: プログラマー脳 優れたプログラマーになるための認知科学に基づくアプローチ
+  pages: 242 ~ 269
+  notes: |
+    Part 4 Chapter 13 コーディングにおける共同作業 新しい開発者のオンボーディング。これで終わり。
+    シニア開発者とジュニア開発者の間には、大量の長期記憶の差があり、結果としてシニア開発者の与える大量の情報が認知的負荷をかけ過ぎてしまうことがある。
+    初心者プログラマの行動を新ピアジェ主義モデルで理解する。初心者プログラマの理解のプロセスは意味波(理解のため抽象と具象を行き来する)に従う。
+    これらを踏まえたうえでオンボーディングを行うと。
+    いまこういうことに関わる機会ないのでそういう機会が万一あった時に備えて心の中に留めておく。
+    一通り読んだので、自分や誰かの理解がイマイチでも認知プロセスのどのへんに問題があるのかくらいは気を使うきっかけは持てたかもな。
