--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -153,3 +153,11 @@
     これらを踏まえたうえでオンボーディングを行うと。
     いまこういうことに関わる機会ないのでそういう機会が万一あった時に備えて心の中に留めておく。
     一通り読んだので、自分や誰かの理解がイマイチでも認知プロセスのどのへんに問題があるのかくらいは気を使うきっかけは持てたかもな。
+- date: 2024-10-16
+  bookTitle: 本を読む本
+  pages: 32 ~ 38
+  notes: |
+    3 初級読書ー読書の第一レベル。
+    高等教育までには身につけるであろう読書スキルを想定してる。
+    愚痴が多いけど、そんだけ身についてないやつが多いってこっちゃろな。
+    素朴に読んでだらこのレベルに留まってんやろからこの先に進も。
