Add a new post.

--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -161,3 +161,12 @@
     高等教育までには身につけるであろう読書スキルを想定してる。
     愚痴が多いけど、そんだけ身についてないやつが多いってこっちゃろな。
     素朴に読んでだらこのレベルに留まってんやろからこの先に進も。
+- date: 2024-10-17
+  bookTitle: 本を読む本
+  pages: 39 ~ 51
+  notes: |
+    4 点検読書ー読書の第二レベル。
+    読むに値する本か組織的に「点検」する。表題・序文、目次、索引、帯のキャッチコピー、結び、重要そうな章をつまみ食いする。
+    表面読みは、一度で理解できなくても最後まで読み通すことで次の読書の土台になる。
+    目次の点検苦手でやってないからもうちょい気合い入れてやろう。索引は結構気になって見るねんよな。
+    索引がしょぼい本はあとから読み直すときにつまみ読みしにくねんよな。
