--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -170,3 +170,12 @@
     表面読みは、一度で理解できなくても最後まで読み通すことで次の読書の土台になる。
     目次の点検苦手でやってないからもうちょい気合い入れてやろう。索引は結構気になって見るねんよな。
     索引がしょぼい本はあとから読み直すときにつまみ読みしにくねんよな。
+- date: 2024-10-18
+  bookTitle: 本を読む本
+  pages: 52 ~ 66
+  notes: |
+    5 意欲的な読者になるためには。
+    何に関する本で、何がどのように詳しく述べられていて、全体として真実またはある部分が真実なのか、それにはどんな意義があるのか。読者は積極的に問わなくてはならない。
+    書き込みでもって本と対話する。
+    読書の規則を 1 つずつ練習して滑らかにつなげて習慣とする。
+    書き込みは付箋貼って昔はやってたけどは長らくやってないなあ。 メモを取っても PAA はやめて PDA 的にやるようになった。時代の流れかの。
