--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -179,3 +179,14 @@
     書き込みでもって本と対話する。
     読書の規則を 1 つずつ練習して滑らかにつなげて習慣とする。
     書き込みは付箋貼って昔はやってたけどは長らくやってないなあ。 メモを取っても PAA はやめて PDA 的にやるようになった。時代の流れかの。
+- date: 2024-10-19
+  bookTitle: 本を読む本
+  pages: 66 ~ 86
+  notes: |
+    6 本を分類する。分析読書の第 1 規則。フィクション・ノンフィクション、教養書か否か、教養書であれば理論的なのか実践的なのか。
+    この本は実践的な本。
+    なるべく早い段階で、できれば事前に点検読書で分類が把握し、特定のカテゴリの中で役に立つ本なのかを見極める。
+    書名・表題について深く考える。直接的に分類できなくても序文・目次・索引から(それでも分からなければつまみ読みから)のシグナルで分類できる。
+    ただしシグナル自体にも疑問を以て受け取る必要がある。
+    ここまで分類に注意するのは、科目によって教師の教え方が変わるのと同じく、分類によって本の読み方が変わるから。
+    そうか～という感じ。無意識にやってたであろう分類、意識的にやろか。
