--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -184,7 +184,7 @@
   pages: 66 ~ 86
   notes: |
     6 本を分類する。分析読書の第 1 規則。フィクション・ノンフィクション、教養書か否か、教養書であれば理論的なのか実践的なのか。
-    この本は実践的な本。
+    この本は「実践的な」本に分類される。
     なるべく早い段階で、できれば事前に点検読書で分類が把握し、特定のカテゴリの中で役に立つ本なのかを見極める。
     書名・表題について深く考える。直接的に分類できなくても序文・目次・索引から(それでも分からなければつまみ読みから)のシグナルで分類できる。
     ただしシグナル自体にも疑問を以て受け取る必要がある。
