--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -190,3 +190,14 @@
     ただしシグナル自体にも疑問を以て受け取る必要がある。
     ここまで分類に注意するのは、科目によって教師の教え方が変わるのと同じく、分類によって本の読み方が変わるから。
     そうか～という感じ。無意識にやってたであろう分類、意識的にやろか。
+- date: 2024-10-20
+  bookTitle: 本を読む本
+  pages: 87 ~  108
+  notes: |
+    7 本を透視する。
+    分析読書の第 2 規則。自分の言葉で要約する。これは「どんな分類か」では主題や目的を把握すること。
+    分析読書の第 3 規則。本の各部分がどのように統一性を持って順序付けらた構成をしているか示す  。
+    2 つの規則は密接に関係しているが、分けることで段階的に理解できる。第 2 規則は本の全体像を、第 3 規則は本の骨格を把握する。
+    分析読書の第 4 規則。著者の問題としている点は何かを知る。意図を組まずして統一性を見出すことはできず、骨格が何のためのものか知ることはできない。
+    ここまでの 4 つの規則を実践できて、分析読書の第一段階となる。
+    ここまでひとつの本に深く切り込んで考えようとしたことなかった気がするわ。あーなるほどねという他の知識とのグラフ的な繋がりを作りイメージはあったけど。
