--- a/contents/booklogs/2024/2024-10.yml
+++ b/contents/booklogs/2024/2024-10.yml
@@ -201,3 +201,15 @@
     分析読書の第 4 規則。著者の問題としている点は何かを知る。意図を組まずして統一性を見出すことはできず、骨格が何のためのものか知ることはできない。
     ここまでの 4 つの規則を実践できて、分析読書の第一段階となる。
     ここまでひとつの本に深く切り込んで考えようとしたことなかった気がするわ。あーなるほどねという他の知識とのグラフ的な繋がりを作りイメージはあったけど。
+- date: 2024-10-21
+  bookTitle: 本を読む本
+  pages: 109 ~  125
+  notes: |
+    8 著者と折り合いをつける。
+    分析読書の第 2 段階、第 5 規則。重要な言葉を手がかりに著者と折り合いをつける。重要な言葉を見つけ、その言葉の指す意味を正確に掴む。
+    言葉自体は曖昧であり、その言葉を著者と読者の間で同じ使い方をして初めて思想を共有できる。
+    重要な言葉の探し方は色々ある。日常語でないもの、著者が強調しているもの、他の著者と違った使い方をしているもの。
+    重要な言葉の意味を掴むには前後の単語を総動員してパズルのように掴む。決まった方法はない。
+    重要な言葉は複数の意味で使われることもあるが、読み手にわかるようはっきり使い分けているなら曖昧さを含まない。
+    重要な言葉は単語・短い句・長い句で同じものが表されることもある。これはよりはっきりと読者に理解させたい意味を示す。
+    この章の規則はちょっと難しいな。概ね何度も繰り返し使われる言葉だったりする気がしてたけど。技術書はそのへん曖昧な言い回し少なくて優しい部類なのかも。
